# plasmapy-summer-school

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: README.md  ci.yml
docs/: README.md  requirements.txt
docs/source/: conf.py  densities.rst  examples.rst  frequencies.rst  index.rst  lengths.rst  speeds.rst
docs/source/notebooks/: astropy-units-completed.ipynb  particles-formulary-completed.ipynb
licenses/: README.md
notebooks/: astropy-units-completed.ipynb  astropy-units.ipynb  dispersion_solver.ipynb  dispersion_solver_complete.ipynb  new.ipynb  particles-formulary-completed.ipynb  particles-formulary.ipynb  plasmapy-particles-formulary-completed.ipynb
src/hack/: README.md  __init__.py
src/hack/formulary/: __init__.py  densities.py  frequencies.py  lengths.py  speeds.py
tests/: README.md  test_example.py
