[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.2.0",
  "setuptools-scm >= 6.3.2",
  "wheel >= 0.37.0",
]

[project]
name = "hack"
description = "A hack package for PlasmaPy's summer school 2024"
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version"]

dependencies = [
  "astropy >= 6.0.0",
  "mypy >= 1.10.0",
  "nbxphinx >= 0.9.3",
  "nox",
  "numpy >= 1.24.0, < 2.0.0",
  "plasmapy >= 2024.5.0",
  "pre-commit >= 3.6.0",
  "pytest >= 8.0.0",
  "scipy >= 1.8.0",
  "sphinx >= 7.3.7",
  "sphinx_rtd_theme >= 2.0.0",
  "uv",
]


[tool.setuptools]
include-package-data = true

[tool.pytest.ini_options]
testpaths = ['.']
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
doctest_optionflags = """
NORMALIZE_WHITESPACE
ELLIPSIS
NUMBER
IGNORE_EXCEPTION_DETAIL"""
